# Advanced-topics

./: CMakeLists.txt  Makefile  Point_Deduction_Defense.txt  README.md  actions.h  binary_heap.cpp  binary_heap.h  bonus.txt  bonus_input.txt  cell.cpp  cell.h  chasing_player.cpp  direction.h  entities.h  game_entity.h  game_manager.cpp  game_manager.h  game_map.cpp  game_map.h  input_a.txt  input_b.txt  input_c.txt  main.cpp  map.txt  map_loader.cpp  map_loader.h  mine.cpp  mine.h  noop_renderer.h  output_input_a.txt  output_input_b.txt  output_input_c.txt  player_v1.cpp  players.h  renderer.h  sfml_renderer.cpp  sfml_renderer.h  shell.cpp  shell.h  students.txt  (+4 more)
Algorithm/: CMakeLists.txt
Algorithm/include/: AdaptiveTankAlgorithm.h  AlgorithmUtilities.h  ChasingTank.h  FullBattleInfo.h  ObservedCell.h  ObservedEntities.h  ObservedEntityUtils.h  PlayerCommunicationModule.h  PlayerOne.h  PlayerTwo.h  Player_206038929_314620071.h  SnipingTank.h  TankAlgorithm_206038929_314620071.h  TankRole.h  TankRoleAlgorithm.h
Algorithm/src/: AdaptiveTankAlgorithm.cpp  AlgorithmUtilities.cpp  ChasingTank.cpp  FullBattleInfo.cpp  ObservedCell.cpp  ObservedTank.cpp  PlayerCommunicationModule.cpp  PlayerOne.cpp  PlayerTwo.cpp  Player_206038929_314620071.cpp  SnipingTank.cpp  TankAlgorithm_206038929_314620071.cpp
GameManager/: CMakeLists.txt  Makefile
GameManager/include/: Cell.h  ConcreteSatelliteView.h  Entities.h  EntityManager.h  GameEntityUtils.h  GameManager.h  GameMap.h  MapLoader.h  MapLoaderTemp.h  MyGameManager_206038929_314620071.h  NoopRenderer.h  Renderer.h  SFMLRenderer.h
GameManager/src/: Cell.cpp  EntityManager.cpp  GameManager.cpp  GameMap.cpp  MapLoader.cpp  MapLoaderTemp.cpp  MyGameManager_206038929_314620071.cpp  SFMLRenderer.cpp  Tank.cpp
Simulator/: CMakeLists.txt  Makefile
Simulator/include/: AlgorithmRegistrar.h  Arguments.h  CommandLineParser.h  ComparativeSimulator.h  CompetitionSimulator.h  Exceptions.h  GameManagerRegistrar.h  GameResultKey.h  Logger.h  Map.h  MapLoader.h  Simulator.h
Simulator/src/: AlgorithmRegistrar.cpp  CommandLineParser.cpp  ComparativeSimulator.cpp  CompetitionSimulator.cpp  GameManagerRegistrar.cpp  GameManagerRegistration.cpp  MapLoader.cpp  PlayerRegistration.cpp  Simulator.cpp  TankAlgorithmRegistration.cpp  main.cpp
UserCommon/: ActionRequestUtils.h  ConcreteSatelliteView.h  Coordinates.h  Direction.h  TankMode.h
common/: AbstractGameManager.h  ActionRequest.h  ActionRequestUtils.h  BattleInfo.h  ConcreteSatelliteView.h  Coordinates.h  Direction.h  FirstTankAlgorithm.h  GameManagerRegistration.h  GameResult.h  MyPlayerFactory.h  MyTankAlgorithmFactory.h  Player.h  PlayerFactory.h  PlayerOne.h  PlayerRegistration.h  PlayerTwo.h  SatelliteView.h  SecondTankAlgorithm.h  TankAlgorithm.h  TankAlgorithmFactory.h  TankAlgorithmRegistration.h  TankMode.h  utils.h
common/src/: MyPlayerFactory.cpp  MyTankAlgorithmFactory.cpp
deprecated/: NoopRenderer.h  Renderer.h  SFMLRenderer.cpp
game_side/include/: Cell.h  ConcreteSatelliteView.h  Entities.h  EntityManager.h  GameManager.h  GameMap.h  MapLoader.h  NoopRenderer.h  Renderer.h  SFMLRenderer.h
game_side/src/: Cell.cpp  EntityManager.cpp  GameManager.cpp  GameMap.cpp  MapLoader.cpp  SFMLRenderer.cpp  Tank.cpp
include/: actions.h  algorithms.h  cell.h  direction.h  entities.h  entity_manager.h  game_manager.h  game_map.h  map_loader.h  noop_renderer.h  players.h  renderer.h  sfml_renderer.h
players_side/include/: AdaptiveTankAlgorithm.h  AlgorithmUtilities.h  ChasingTank.h  FirstTankAlgorithm.h  FullBattleInfo.h  ObservedCell.h  ObservedEntities.h  PlayerCommunicationModule.h  PlayerOne.h  PlayerTwo.h  SecondTankAlgorithm.h  SnipingTank.h  TankRole.h  TankRoleAlgorithm.h
players_side/src/: AdaptiveTankAlgorithm.cpp  AlgorithmUtilities.cpp  ChasingTank.cpp  FirstTankAlgorithm.cpp  FullBattleInfo.cpp  ObservedCell.cpp  ObservedTank.cpp  PlayerCommunicationModule.cpp  PlayerOne.cpp  PlayerTwo.cpp  SecondTankAlgorithm.cpp  SnipingTank.cpp
src/: algorithm_v1.cpp  algorithms.cpp  binary_heap.cpp  cell.cpp  chasing_algorithm.cpp  entity_manager.cpp  game_manager.cpp  game_map.cpp  main.cpp  map_loader.cpp  sfml_renderer.cpp  tank.cpp
